// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TreeNodeComponent does not render children if the node is loading 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={<ChevronRight20Regular />}
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent fully renders a tree 1`] = `
<TreeNodeComponent
  node={
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon.svg",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        },
        Object {
          "children": Array [
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild3NotRenderedIcon",
              "id": "grandchild3NotRendered",
              "label": "grandchild3NotRenderedLabel",
              "onClick": [MockFunction grandchild3NotRenderedClick],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child2LoadingIcon",
          "id": "child2Loading",
          "isLoading": true,
          "label": "child2LoadingLabel",
          "onClick": [MockFunction child2LoadingClick],
        },
        Object {
          "className": "nodeIcon",
          "iconSrc": "child3ExpandingIcon",
          "id": "child3Expanding",
          "label": "child3ExpandingLabel",
          "onClick": [MockFunction child3ExpandingClick] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "onExpanded": [Function],
        },
      ],
      "className": "nodeIcon",
      "iconSrc": "rootIcon",
      "id": "root",
      "isSelected": [Function],
      "label": "rootLabel",
      "onClick": [MockFunction rootClick],
    }
  }
  openItems={Array []}
  treeNodeId="root"
>
  <TreeItem
    className=""
    data-test="TreeNodeContainer:root"
    itemType="branch"
    onOpenChange={[Function]}
    value="root"
  >
    <div
      aria-expanded={false}
      aria-level={0}
      aria-selected="false"
      className="fui-TreeItem r1hiwysc"
      data-fui-tree-item-value="root"
      data-test="TreeNodeContainer:root"
      onChange={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      role="treeitem"
      tabIndex={-1}
    >
      <ContextSelector.Provider
        value={
          Object {
            "actionsRef": Object {
              "current": null,
            },
            "checked": false,
            "expandIconRef": Object {
              "current": <div
                aria-hidden="true"
                class="fui-TreeItemLayout__expandIcon rogdio4"
              >
                <svg
                  aria-hidden="true"
                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </div>,
            },
            "isActionsVisible": false,
            "isAsideVisible": false,
            "itemType": "branch",
            "layoutRef": Object {
              "current": <div
                class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                data-test="TreeNode:root"
              >
                <div
                  aria-hidden="true"
                  class="fui-TreeItemLayout__expandIcon rogdio4"
                >
                  <svg
                    aria-hidden="true"
                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                    fill="currentColor"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="fui-TreeItemLayout__main rfjd92f"
                >
                  <span
                    class=""
                  >
                    rootLabel
                  </span>
                </div>
              </div>,
            },
            "open": false,
            "selectionRef": Object {
              "current": null,
            },
            "subtreeRef": Object {
              "current": null,
            },
            "treeItemRef": Object {
              "current": <div
                aria-expanded="false"
                aria-level="0"
                aria-selected="false"
                class="fui-TreeItem r1hiwysc"
                data-fui-tree-item-value="root"
                data-test="TreeNodeContainer:root"
                role="treeitem"
                tabindex="-1"
              >
                <div
                  class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                  data-test="TreeNode:root"
                >
                  <div
                    aria-hidden="true"
                    class="fui-TreeItemLayout__expandIcon rogdio4"
                  >
                    <svg
                      aria-hidden="true"
                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 20 20"
                      width="20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                  <div
                    class="fui-TreeItemLayout__main rfjd92f"
                  >
                    <span
                      class=""
                    >
                      rootLabel
                    </span>
                  </div>
                </div>
                <div
                  class="fui-Tree rnv2ez3 ___jy13a00_lpffjy0 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
                  role="tree"
                >
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    aria-selected="false"
                    class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child1Label"
                    data-test="TreeNodeContainer:root/child1Label"
                    role="treeitem"
                    tabindex="0"
                  >
                    <div
                      class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child1Label"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rogdio4"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          fill="currentColor"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rfjd92f"
                      >
                        <span
                          class=""
                        >
                          child1Label
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-expanded="false"
                    aria-level="1"
                    aria-selected="false"
                    class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child2LoadingLabel"
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child2LoadingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rogdio4"
                      >
                        <svg
                          aria-hidden="true"
                          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                          fill="currentColor"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rfjd92f"
                      >
                        <span
                          class=""
                        >
                          child2LoadingLabel
                        </span>
                      </div>
                    </div>
                  </div>
                  <div
                    aria-level="1"
                    aria-selected="false"
                    class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                    data-fui-tree-item-value="root/child3ExpandingLabel"
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    role="treeitem"
                    tabindex="-1"
                  >
                    <div
                      class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vrg09j fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                      data-test="TreeNode:root/child3ExpandingLabel"
                    >
                      <div
                        aria-hidden="true"
                        class="fui-TreeItemLayout__expandIcon rogdio4"
                      >
                        <div
                          class="fui-Spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
                          role="progressbar"
                        >
                          <span
                            class="fui-Spinner__spinner ___rymi200_1dtscmh f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1x2gjcb f1vjiaua fv1u54w f1oebb0s f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
                          >
                            <svg
                              class="fui-Spinner__Progressbar"
                            >
                              <circle
                                class="fui-Spinner__Track"
                              />
                              <circle
                                class="fui-Spinner__Tail"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                      <div
                        class="fui-TreeItemLayout__main rfjd92f"
                      >
                        <span
                          class=""
                        >
                          child3ExpandingLabel
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>,
            },
            "value": "root",
          }
        }
      >
        <TreeItemLayout
          actions={false}
          className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
          data-test="TreeNode:root"
          expandIcon={<ChevronRight20Regular />}
        >
          <div
            className="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
            data-test="TreeNode:root"
          >
            <div
              aria-hidden={true}
              className="fui-TreeItemLayout__expandIcon rogdio4"
            >
              <ChevronRight20Regular>
                <svg
                  aria-hidden={true}
                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                  fill="currentColor"
                  height="20"
                  viewBox="0 0 20 20"
                  width="20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                    fill="currentColor"
                  />
                </svg>
              </ChevronRight20Regular>
            </div>
            <div
              className="fui-TreeItemLayout__main rfjd92f"
            >
              <span
                className=""
              >
                rootLabel
              </span>
            </div>
          </div>
        </TreeItemLayout>
        <Tree
          className="___jy13a00_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
        >
          <TreeProvider
            value={
              Object {
                "appearance": "subtle",
                "checkedItems": Object {
                  "clear": [Function],
                  "dangerouslyGetInternalMap_unstable": [Function],
                  "delete": [Function],
                  "get": [Function],
                  "has": [Function],
                  "set": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "contextType": "root",
                "level": 1,
                "openItems": Object {
                  "add": [Function],
                  "clear": [Function],
                  "dangerouslyGetInternalSet_unstable": [Function],
                  "delete": [Function],
                  "has": [Function],
                  "size": 0,
                  Symbol(Symbol.iterator): [Function],
                },
                "requestTreeResponse": [Function],
                "selectionMode": "none",
                "size": "medium",
                "treeType": "nested",
              }
            }
          >
            <ContextSelector.Provider
              value={
                Object {
                  "appearance": "subtle",
                  "checkedItems": Object {
                    "clear": [Function],
                    "dangerouslyGetInternalMap_unstable": [Function],
                    "delete": [Function],
                    "get": [Function],
                    "has": [Function],
                    "set": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "contextType": "root",
                  "level": 1,
                  "openItems": Object {
                    "add": [Function],
                    "clear": [Function],
                    "dangerouslyGetInternalSet_unstable": [Function],
                    "delete": [Function],
                    "has": [Function],
                    "size": 0,
                    Symbol(Symbol.iterator): [Function],
                  },
                  "requestTreeResponse": [Function],
                  "selectionMode": "none",
                  "size": "medium",
                  "treeType": "nested",
                }
              }
            >
              <div
                className="fui-Tree rnv2ez3 ___jy13a00_lpffjy0 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
                role="tree"
              >
                <TreeNodeComponent
                  key="child1Label"
                  node={
                    Object {
                      "children": Array [
                        Object {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild1Icon.svg",
                          "id": "grandchild1",
                          "isSelected": [Function],
                          "label": "grandchild1Label",
                          "onClick": [MockFunction grandchild1Click],
                        },
                        Object {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild2Icon",
                          "id": "grandchild2",
                          "label": "grandchild2Label",
                          "onClick": [MockFunction grandchild2Click],
                        },
                      ],
                      "className": "nodeIcon",
                      "iconSrc": "child1Icon",
                      "id": "child1",
                      "label": "child1Label",
                      "onClick": [MockFunction child1Click],
                    }
                  }
                  openItems={Array []}
                  treeNodeId="root/child1Label"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child1Label"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child1Label"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      aria-selected="false"
                      className="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child1Label"
                      data-test="TreeNodeContainer:root/child1Label"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          Object {
                            "actionsRef": Object {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": Object {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rogdio4"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": Object {
                              "current": <div
                                class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child1Label"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rogdio4"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rfjd92f"
                                >
                                  <span
                                    class=""
                                  >
                                    child1Label
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": Object {
                              "current": null,
                            },
                            "subtreeRef": Object {
                              "current": null,
                            },
                            "treeItemRef": Object {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                aria-selected="false"
                                class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child1Label"
                                data-test="TreeNodeContainer:root/child1Label"
                                role="treeitem"
                                tabindex="0"
                              >
                                <div
                                  class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child1Label"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rogdio4"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      fill="currentColor"
                                      height="20"
                                      viewBox="0 0 20 20"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rfjd92f"
                                  >
                                    <span
                                      class=""
                                    >
                                      child1Label
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child1Label",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child1Label"
                          expandIcon={<ChevronRight20Regular />}
                        >
                          <div
                            className="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child1Label"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rogdio4"
                            >
                              <ChevronRight20Regular>
                                <svg
                                  aria-hidden={true}
                                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </ChevronRight20Regular>
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rfjd92f"
                            >
                              <span
                                className=""
                              >
                                child1Label
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                        <Tree
                          className="___jy13a00_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
                        >
                          <TreeProvider
                            value={
                              Object {
                                "contextType": "subtree",
                                "level": 2,
                              }
                            }
                          />
                        </Tree>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child2LoadingLabel"
                  node={
                    Object {
                      "children": Array [
                        Object {
                          "className": "nodeIcon",
                          "iconSrc": "grandchild3NotRenderedIcon",
                          "id": "grandchild3NotRendered",
                          "label": "grandchild3NotRenderedLabel",
                          "onClick": [MockFunction grandchild3NotRenderedClick],
                        },
                      ],
                      "className": "nodeIcon",
                      "iconSrc": "child2LoadingIcon",
                      "id": "child2Loading",
                      "isLoading": true,
                      "label": "child2LoadingLabel",
                      "onClick": [MockFunction child2LoadingClick],
                    }
                  }
                  openItems={Array []}
                  treeNodeId="root/child2LoadingLabel"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child2LoadingLabel"
                    itemType="branch"
                    onOpenChange={[Function]}
                    value="root/child2LoadingLabel"
                  >
                    <div
                      aria-expanded={false}
                      aria-level={1}
                      aria-selected="false"
                      className="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child2LoadingLabel"
                      data-test="TreeNodeContainer:root/child2LoadingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          Object {
                            "actionsRef": Object {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": Object {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rogdio4"
                              >
                                <svg
                                  aria-hidden="true"
                                  class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "branch",
                            "layoutRef": Object {
                              "current": <div
                                class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child2LoadingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rogdio4"
                                >
                                  <svg
                                    aria-hidden="true"
                                    class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                    fill="currentColor"
                                    height="20"
                                    viewBox="0 0 20 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                      fill="currentColor"
                                    />
                                  </svg>
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rfjd92f"
                                >
                                  <span
                                    class=""
                                  >
                                    child2LoadingLabel
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": Object {
                              "current": null,
                            },
                            "subtreeRef": Object {
                              "current": null,
                            },
                            "treeItemRef": Object {
                              "current": <div
                                aria-expanded="false"
                                aria-level="1"
                                aria-selected="false"
                                class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child2LoadingLabel"
                                data-test="TreeNodeContainer:root/child2LoadingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child2LoadingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rogdio4"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                      fill="currentColor"
                                      height="20"
                                      viewBox="0 0 20 20"
                                      width="20"
                                      xmlns="http://www.w3.org/2000/svg"
                                    >
                                      <path
                                        d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                        fill="currentColor"
                                      />
                                    </svg>
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rfjd92f"
                                  >
                                    <span
                                      class=""
                                    >
                                      child2LoadingLabel
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child2LoadingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child2LoadingLabel"
                          expandIcon={<ChevronRight20Regular />}
                        >
                          <div
                            className="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vtp8mg fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child2LoadingLabel"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rogdio4"
                            >
                              <ChevronRight20Regular>
                                <svg
                                  aria-hidden={true}
                                  className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
                                  fill="currentColor"
                                  height="20"
                                  viewBox="0 0 20 20"
                                  width="20"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M7.65 4.15c.2-.2.5-.2.7 0l5.49 5.46c.21.22.21.57 0 .78l-5.49 5.46a.5.5 0 0 1-.7-.7L12.8 10 7.65 4.85a.5.5 0 0 1 0-.7Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </ChevronRight20Regular>
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rfjd92f"
                            >
                              <span
                                className=""
                              >
                                child2LoadingLabel
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
                <TreeNodeComponent
                  key="child3ExpandingLabel"
                  node={
                    Object {
                      "className": "nodeIcon",
                      "iconSrc": "child3ExpandingIcon",
                      "id": "child3Expanding",
                      "label": "child3ExpandingLabel",
                      "onClick": [MockFunction child3ExpandingClick] {
                        "calls": Array [
                          Array [],
                        ],
                        "results": Array [
                          Object {
                            "type": "return",
                            "value": undefined,
                          },
                        ],
                      },
                      "onExpanded": [Function],
                    }
                  }
                  openItems={Array []}
                  treeNodeId="root/child3ExpandingLabel"
                >
                  <TreeItem
                    className=""
                    data-test="TreeNodeContainer:root/child3ExpandingLabel"
                    itemType="leaf"
                    onOpenChange={[Function]}
                    value="root/child3ExpandingLabel"
                  >
                    <div
                      aria-level={1}
                      aria-selected="false"
                      className="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                      data-fui-tree-item-value="root/child3ExpandingLabel"
                      data-test="TreeNodeContainer:root/child3ExpandingLabel"
                      onChange={[Function]}
                      onClick={[Function]}
                      onKeyDown={[Function]}
                      role="treeitem"
                      tabIndex={-1}
                    >
                      <ContextSelector.Provider
                        value={
                          Object {
                            "actionsRef": Object {
                              "current": null,
                            },
                            "checked": false,
                            "expandIconRef": Object {
                              "current": <div
                                aria-hidden="true"
                                class="fui-TreeItemLayout__expandIcon rogdio4"
                              >
                                <div
                                  class="fui-Spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
                                  role="progressbar"
                                >
                                  <span
                                    class="fui-Spinner__spinner ___rymi200_1dtscmh f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1x2gjcb f1vjiaua fv1u54w f1oebb0s f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
                                  >
                                    <svg
                                      class="fui-Spinner__Progressbar"
                                    >
                                      <circle
                                        class="fui-Spinner__Track"
                                      />
                                      <circle
                                        class="fui-Spinner__Tail"
                                      />
                                    </svg>
                                  </span>
                                </div>
                              </div>,
                            },
                            "isActionsVisible": false,
                            "isAsideVisible": false,
                            "itemType": "leaf",
                            "layoutRef": Object {
                              "current": <div
                                class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vrg09j fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                data-test="TreeNode:root/child3ExpandingLabel"
                              >
                                <div
                                  aria-hidden="true"
                                  class="fui-TreeItemLayout__expandIcon rogdio4"
                                >
                                  <div
                                    class="fui-Spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
                                    role="progressbar"
                                  >
                                    <span
                                      class="fui-Spinner__spinner ___rymi200_1dtscmh f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1x2gjcb f1vjiaua fv1u54w f1oebb0s f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
                                    >
                                      <svg
                                        class="fui-Spinner__Progressbar"
                                      >
                                        <circle
                                          class="fui-Spinner__Track"
                                        />
                                        <circle
                                          class="fui-Spinner__Tail"
                                        />
                                      </svg>
                                    </span>
                                  </div>
                                </div>
                                <div
                                  class="fui-TreeItemLayout__main rfjd92f"
                                >
                                  <span
                                    class=""
                                  >
                                    child3ExpandingLabel
                                  </span>
                                </div>
                              </div>,
                            },
                            "open": false,
                            "selectionRef": Object {
                              "current": null,
                            },
                            "subtreeRef": Object {
                              "current": null,
                            },
                            "treeItemRef": Object {
                              "current": <div
                                aria-level="1"
                                aria-selected="false"
                                class="fui-TreeItem r1hiwysc ___jer8zr0_6no3ah0 f10bgyvd"
                                data-fui-tree-item-value="root/child3ExpandingLabel"
                                data-test="TreeNodeContainer:root/child3ExpandingLabel"
                                role="treeitem"
                                tabindex="-1"
                              >
                                <div
                                  class="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vrg09j fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                                  data-test="TreeNode:root/child3ExpandingLabel"
                                >
                                  <div
                                    aria-hidden="true"
                                    class="fui-TreeItemLayout__expandIcon rogdio4"
                                  >
                                    <div
                                      class="fui-Spinner ___p104zz0_oywd6f0 f22iagw f122n59 f4d9j23 fez10in f4px1ci fn67r4l f1063pyq"
                                      role="progressbar"
                                    >
                                      <span
                                        class="fui-Spinner__spinner ___rymi200_1dtscmh f1or16p5 f1grzc83 f19shzzi f5tbecn fn4mtlg f1y80fxs f1r2crtq f1wsi8sr f1bkm2qd f1urqz7h f1da2vov f11rfva0 f1exc66 f1x2gjcb f1vjiaua fv1u54w f1oebb0s f11ditju f1m9nikz fq8a5sv f1b4lwqj f1najlst fjxod4 fu3xdw0 f1ttdh6v f1eseayc folzdkc fhlfkde f13qeqtg flglbw1"
                                      >
                                        <svg
                                          class="fui-Spinner__Progressbar"
                                        >
                                          <circle
                                            class="fui-Spinner__Track"
                                          />
                                          <circle
                                            class="fui-Spinner__Tail"
                                          />
                                        </svg>
                                      </span>
                                    </div>
                                  </div>
                                  <div
                                    class="fui-TreeItemLayout__main rfjd92f"
                                  >
                                    <span
                                      class=""
                                    >
                                      child3ExpandingLabel
                                    </span>
                                  </div>
                                </div>
                              </div>,
                            },
                            "value": "root/child3ExpandingLabel",
                          }
                        }
                      >
                        <TreeItemLayout
                          actions={false}
                          className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
                          data-test="TreeNode:root/child3ExpandingLabel"
                          expandIcon={
                            <img
                              alt=""
                              className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                              src="child3ExpandingIcon"
                            />
                          }
                        >
                          <div
                            className="fui-TreeItemLayout rcu2h5o ___dxcrnh0_1vrg09j fk6fouc fkhj508 figsok6 f1i3iumi f1k1erfc fbv8p0b f1f09k3d fg706s2 frpde29 f1n8cmsf f1ktbui8 f1do9gdl"
                            data-test="TreeNode:root/child3ExpandingLabel"
                          >
                            <div
                              aria-hidden={true}
                              className="fui-TreeItemLayout__expandIcon rogdio4"
                            >
                              <img
                                alt=""
                                className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
                                src="child3ExpandingIcon"
                              />
                            </div>
                            <div
                              className="fui-TreeItemLayout__main rfjd92f"
                            >
                              <span
                                className=""
                              >
                                child3ExpandingLabel
                              </span>
                            </div>
                          </div>
                        </TreeItemLayout>
                      </ContextSelector.Provider>
                    </div>
                  </TreeItem>
                </TreeNodeComponent>
              </div>
            </ContextSelector.Provider>
          </TreeProvider>
        </Tree>
      </ContextSelector.Provider>
    </div>
  </TreeItem>
</TreeNodeComponent>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loaded 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a loading spinner if the node is loading: loading 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <Spinner
        size="extra-tiny"
      />
    }
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node as expandable if it has empty, but defined, children array 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={<ChevronRight20Regular />}
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders a node with a menu 1`] = `
<Menu
  onOpenChange={[Function]}
  openOnContext={true}
  positioning="below-end"
>
  <MenuTrigger
    disableButtonEnhancement={true}
  >
    <TreeItem
      className=""
      data-test="TreeNodeContainer:root"
      itemType="leaf"
      onOpenChange={[Function]}
      value="root"
    >
      <TreeItemLayout
        actions={
          Object {
            "children": <Menu
              onOpenChange={[Function]}
            >
              <MenuTrigger
                disableButtonEnhancement={true}
              >
                <Button
                  appearance="subtle"
                  aria-label="More options"
                  className="___1pg0eu5_pgl3ex0 f1twygmj"
                  data-test="TreeNode/ContextMenuTrigger"
                  icon={<MoreHorizontal20Regular />}
                />
              </MenuTrigger>
              <MenuPopover
                data-test="TreeNode/ContextMenu:root"
              >
                <MenuList>
                  <MenuItem
                    data-test="TreeNode/ContextMenuItem:enabledItem"
                    onClick={[MockFunction enabledItemClick]}
                  >
                    enabledItem
                  </MenuItem>
                  <MenuItem
                    data-test="TreeNode/ContextMenuItem:disabledItem"
                    disabled={true}
                    onClick={[MockFunction disabledItemClick]}
                  >
                    disabledItem
                  </MenuItem>
                </MenuList>
              </MenuPopover>
            </Menu>,
            "className": "___1r8p62d_0000000 f1xg1ack f1e31b4d",
          }
        }
        className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
        data-test="TreeNode:root"
        expandIcon={
          <img
            alt=""
            className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
            src="rootIcon"
          />
        }
      >
        <span
          className=""
        >
          rootLabel
        </span>
      </TreeItemLayout>
    </TreeItem>
  </MenuTrigger>
  <MenuPopover>
    <MenuList>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:enabledItem"
        key="enabledItem"
        onClick={[MockFunction enabledItemClick]}
      >
        enabledItem
      </MenuItem>
      <MenuItem
        data-test="TreeNode/ContextMenuItem:disabledItem"
        disabled={true}
        key="disabledItem"
        onClick={[MockFunction disabledItemClick]}
      >
        disabledItem
      </MenuItem>
    </MenuList>
  </MenuPopover>
</Menu>
`;

exports[`TreeNodeComponent renders a single node 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders an icon if the node has one 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="the-icon.svg"
      />
    }
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as selected if no descendant nodes are selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___kqkdor0_ihxn0o0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1nfm20t f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={<ChevronRight20Regular />}
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
  <Tree
    className="___jy13a00_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        Object {
          "children": Array [
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      openItems={Array []}
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        Object {
          "className": "nodeIcon",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      openItems={Array []}
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders selected parent node as unselected if any descendant node is selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="branch"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___1kqyw53_iy2icj0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={<ChevronRight20Regular />}
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
  <Tree
    className="___jy13a00_0000000 f1acs6jw f11qra4b fepn2xe f1nbblvp fhxm7u5 fzz4f4n"
  >
    <TreeNodeComponent
      key="child1Label"
      node={
        Object {
          "children": Array [
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild1Icon",
              "id": "grandchild1",
              "isSelected": [Function],
              "label": "grandchild1Label",
              "onClick": [MockFunction grandchild1Click],
            },
            Object {
              "className": "nodeIcon",
              "iconSrc": "grandchild2Icon",
              "id": "grandchild2",
              "label": "grandchild2Label",
              "onClick": [MockFunction grandchild2Click],
            },
          ],
          "className": "nodeIcon",
          "iconSrc": "child1Icon",
          "id": "child1",
          "label": "child1Label",
          "onClick": [MockFunction child1Click],
        }
      }
      openItems={Array []}
      treeNodeId="root/child1Label"
    />
    <TreeNodeComponent
      key="child2Label"
      node={
        Object {
          "className": "nodeIcon",
          "iconSrc": "child2Icon",
          "id": "child2",
          "label": "child2Label",
          "onClick": [MockFunction child2Click],
        }
      }
      openItems={Array []}
      treeNodeId="root/child2Label"
    />
  </Tree>
</TreeItem>
`;

exports[`TreeNodeComponent renders single selected leaf node as selected 1`] = `
<TreeItem
  className=""
  data-test="TreeNodeContainer:root"
  itemType="leaf"
  onOpenChange={[Function]}
  value="root"
>
  <TreeItemLayout
    actions={false}
    className="___kqkdor0_ihxn0o0 fkhj508 fbv8p0b f1f09k3d fg706s2 frpde29 f1k1erfc f1n8cmsf f1ktbui8 f1nfm20t f1do9gdl"
    data-test="TreeNode:root"
    expandIcon={
      <img
        alt=""
        className="___i3nbrx0_0000000 f1do9gdl fbv8p0b"
        src="rootIcon"
      />
    }
  >
    <span
      className=""
    >
      rootLabel
    </span>
  </TreeItemLayout>
</TreeItem>
`;
